[package]
name = "getting-started-with-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
cargo-watch = "8.2.1"
serde = "1.0.152"
serde_json = "1.0.91"
tokio = { version = "1.23.1", features = ["full"] }
tower-http =  { version = "0.3.5", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
