[package]
name = "ch3-route-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["serde_derive"] }
tokio = { version = "1.25.0", features = ["full"] }
warp = "0.3.3"
